<resources>
    <string name="app_name">Messenger</string>
    <string name="nickname_hint">Enter your nickname</string>
    <string name="password_hint">Enter your password</string>
    <string name="what_i_do_hint">What I do</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="update">UPDATE</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="not_registered">Not registered?</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="fab_description">FAB</string>
    <string name="blank"></string>
    <string name="wait">Please wait…</string>
    <string name="message_hint">Message</string>
    <string name="hint_search">Search</string>
    <string name="go_back_desc">go back</string>
    <string name="empty_user_text">example</string>
    <string name="temp_job_text">temp job</string>
    <string name="empty_nick">empty_nick</string>
    <string name="empty_job">empty_job</string>
    <string name="temp_string_for_last_message">hi, how is life, asdasdasxxasdasdasdasdasdasdasdasdasasdasdasdasdasdasdasdasdasdasdasdasda</string>
</resources>