<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/sign_in_up_img_size"
            android:layout_height="@dimen/sign_in_up_img_size"
            android:layout_marginBottom="@dimen/sign_in_up_img_margin"
            android:src="@drawable/avatar_image_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/etNickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNickname"
            android:layout_width="@dimen/et1_width"
            android:layout_height="@dimen/et1_height"
            android:layout_margin="@dimen/et1_margin"
            android:background="@drawable/et_frame"
            android:gravity="center"
            android:hint="@string/nickname_hint"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar">

        </EditText>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="@dimen/et1_width"
            android:layout_height="@dimen/et1_height"
            android:layout_margin="@dimen/et1_margin"
            android:background="@drawable/et_frame"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/etWhatIDo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNickname" />

        <EditText
            android:id="@+id/etWhatIDo"
            android:layout_width="@dimen/et1_width"
            android:layout_height="@dimen/et1_height"
            android:layout_margin="@dimen/et1_margin"
            android:background="@drawable/et_frame"
            android:gravity="center"
            android:hint="@string/what_i_do_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/btn1_width"
        android:layout_height="@dimen/btn1_height"
        android:layout_margin="@dimen/btn1_margin"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_up"
        android:textSize="@dimen/btn1_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clCenter" />

</androidx.constraintlayout.widget.ConstraintLayout>